--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -84,8 +84,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingTop="15dp"
-                    android:paddingLeft="@dimen/dimen_20dp"
-                    android:paddingRight="@dimen/dimen_20dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:paddingBottom="35dp"
                     android:orientation="vertical" >
 
