--- a/app/src/main/res/layout/wallet_home_copy.xml
+++ b/app/src/main/res/layout/wallet_home_copy.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_vertical"
-    android:background="@color/colorAccentLight"
+    android:background="#f0f1ed"
     android:orientation="vertical"
     tools:context="com.myfarmnow.myfarmcrop.fragments.wallet.WalletHomeFragment">
 
