--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -128,6 +128,7 @@
         <item name="android:textAllCaps">true</item>
         <item name="android:fontFamily">@font/josefin_sans</item>
         <item name="android:textSize">23sp</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@color/colorPrimary</item>
     </style>
