--- a/app/src/main/res/layout/fragment_wallet_loan_preview_request.xml
+++ b/app/src/main/res/layout/fragment_wallet_loan_preview_request.xml
@@ -40,12 +40,12 @@
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginLeft="0dp"
                     android:layout_marginTop="15dp"
-                    android:src="@drawable/back_black_24dp" />
+                    app:srcCompat="@drawable/back_black_24dp" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -54,7 +54,7 @@
                     android:layout_marginTop="12dp"
                     android:text="Confirm Details"
                     android:textColor="@color/white"
-                    android:textSize="25dp" />
+                    android:textSize="20dp" />
             </RelativeLayout>
         </LinearLayout>
 
@@ -84,6 +84,7 @@
                 android:layout_marginTop="@dimen/dimen_20dp"
                 app:spb_animateToCurrentProgressState="true"
                 app:spb_checkStateCompleted="true"
+                app:spb_animationDuration="500"
                 app:spb_currentStateDescriptionColor="@color/colorPrimary"
                 app:spb_currentStateNumber="two"
                 app:spb_maxStateNumber="three"
@@ -91,7 +92,8 @@
                 app:spb_stateDescriptionColor="#808080"
                 app:spb_stateForegroundColor="@color/colorPrimary"
                 app:spb_stateNumberBackgroundColor="#808080"
-                app:spb_stateNumberForegroundColor="#eeeeee" />
+                app:spb_stateNumberForegroundColor="#eeeeee"
+                app:spb_stateLineThickness="4dp" />
 
             <TextView
                 android:id="@+id/text_view_error_message"
