--- a/app/src/main/res/layout/wallet_add_money_visa.xml
+++ b/app/src/main/res/layout/wallet_add_money_visa.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,14 +12,24 @@
         android:id="@+id/layout_add_money"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@color/colorPrimary">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_weight=".1"
             android:gravity="center"
             android:text="@string/addmoney"
             android:theme="@style/HeaderTheme"/>
+        <ImageView
+            android:id="@+id/wallet_deposit_close"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_weight=".9"
+            android:layout_gravity="end"
+            android:layout_margin="5dp"
+            android:src="@drawable/close" />
 
     </LinearLayout>
 
@@ -52,7 +63,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.9"
-                    android:src="@drawable/wallet_deposit" />
+                    app:srcCompat="@drawable/wallet_deposit" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -76,7 +87,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.9"
-                    android:src="@drawable/wallet_transfer" />
+                    app:srcCompat="@drawable/wallet_transfer" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -237,43 +248,42 @@
                     android:textSize="12sp" />
             </LinearLayout>
 
-            <Button
-                android:id="@+id/button_add_money"
-                style="@style/Button_DW"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_gravity="right"
-                android:background="@drawable/solidbtn_shape"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:text="@string/deposit"
-                android:textAllCaps="false"
-                android:textColor="@color/white" />
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_10"
+                android:layout_marginTop="@dimen/margin_10"
+                android:layout_marginRight="@dimen/margin_10"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/rounded_corners_button"
+                android:gravity="right">
 
-            <Button
-                style="@style/Button_DW"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_gravity="right"
-                android:background="@drawable/solidbtn_shape"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:text="@string/withdraw"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:visibility="gone" />
+                <Button
+                    android:id="@+id/button_add_money"
+                    style="@style/Button_DW"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dip"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:background="@color/transparent"
+                    android:backgroundTint="@color/textColor"
+                    android:text="@string/deposit"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/button_text_size" />
 
-            <Button
-                style="@style/Button_DW"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:text="@string/transfer"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:visibility="gone" />
+                <ImageView
+                    android:layout_width="30dip"
+                    android:layout_height="30dip"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="right|center_vertical"
+                    android:layout_margin="10dip"
+                    android:src="@drawable/ic_right_arrow">
+
+                </ImageView>
+
+            </FrameLayout>
 
 
         </LinearLayout>
