--- a/app/src/main/res/layout/wallet_loan_card.xml
+++ b/app/src/main/res/layout/wallet_loan_card.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/dimen_5dp"
     android:background="@color/colorAccentLight">
 
 
@@ -22,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Nov 20, 2020"
-            android:textSize="15sp"
+            android:textSize="18sp"
             android:textColor="@color/colorPrimary"
             android:textStyle="bold"/>
 
@@ -32,8 +33,8 @@
             android:id="@+id/card_layout_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:layout_marginTop="5dp"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/layout_debit_activity"
@@ -44,7 +45,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="2dp">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -53,7 +55,7 @@
                         android:gravity="start"
                         android:text="Loan Number"
                         android:fontFamily="@font/josefin_sans"
-                        android:textColor="@color/textColor" />
+                        android:textColor="@color/black" />
 
                     <TextView
                         android:id="@+id/text_view_loan_application_number"
@@ -61,8 +63,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="REF 001212"
+                        android:textSize="14sp"
                         android:fontFamily="@font/josefin_sans"
-                        android:textColor="@color/textColor"/>
+                        android:textColor="@color/black"/>
 
 
                 </LinearLayout>
@@ -77,7 +80,8 @@
 
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="2dp">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -86,7 +90,7 @@
                         android:gravity="start"
                         android:text="Amount"
                         android:fontFamily="@font/josefin_sans"
-                        android:textColor="@color/textColor" />
+                        android:textColor="@color/black" />
 
                     <TextView
                         android:id="@+id/text_view_loan_application_amount"
@@ -95,14 +99,15 @@
                         android:layout_weight="1"
                         android:text="+ UGX 0"
                         android:fontFamily="@font/josefin_sans"
-                        android:textColor="@color/textColor"/>
+                        android:textColor="@color/black"/>
 
 
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="2dp">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -111,8 +116,7 @@
                         android:gravity="start"
                         android:text="Due on"
                         android:fontFamily="@font/josefin_sans"
-                        android:textColor="@color/textColor"
-                        />
+                        android:textColor="@color/black" />
 
                     <TextView
                         android:id="@+id/text_view_loan_application_due_on"
@@ -121,7 +125,7 @@
                         android:layout_weight="1"
                         android:text="29/10/2019"
                         android:fontFamily="@font/josefin_sans"
-                        android:textColor="@color/textColor"
+                        android:textColor="@color/black"
                         />
 
 
@@ -130,7 +134,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginBottom="10dp">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -139,7 +144,7 @@
                     android:gravity="start"
                     android:text="Status"
                     android:fontFamily="@font/josefin_sans"
-                    android:textColor="@color/textColor"/>
+                    android:textColor="@color/black"/>
 
                 <TextView
                     android:id="@+id/text_view_loan_application_status"
@@ -148,7 +153,7 @@
                     android:layout_weight="1"
                     android:text="Pending Correction"
                     android:fontFamily="@font/josefin_sans"
-                    android:textColor="@color/textColor"
+                    android:textColor="@color/black"
                     />
 
 
