--- a/app/src/main/res/layout/wallet_pay_loan.xml
+++ b/app/src/main/res/layout/wallet_pay_loan.xml
@@ -11,17 +11,25 @@
         android:id="@+id/layout_add_money"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@color/colorPrimary">
 
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_weight=".1"
             android:gravity="center"
             android:text="Pay Loan"
-            android:theme="@style/HeaderTheme"
-            />
-
+            android:theme="@style/HeaderTheme" />
+        <ImageView
+            android:id="@+id/wallet_transfer_money_close"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_weight=".9"
+            android:layout_gravity="end"
+            android:layout_margin="5dp"
+            android:src="@drawable/close" />
     </LinearLayout>
 
 
@@ -146,6 +154,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Amount (UGX)"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <EditText
@@ -174,27 +183,43 @@
                     />
 
             </LinearLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_10"
+            android:layout_marginRight="@dimen/margin_10"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/rounded_corners_button"
+            android:gravity="right"
+            android:paddingRight="@dimen/dimen_10dp">
 
-            <LinearLayout
+            <Button
+                android:id="@+id/btn_pay"
+                style="@style/Button_DW"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="right"
-                android:layout_marginBottom="5dp">
+                android:layout_height="40dip"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:background="@color/transparent"
+                android:backgroundTint="@color/textColor"
+                android:text="Pay"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="@dimen/button_text_size" />
 
-                <Button
-                    android:id="@+id/btn_pay"
-                    style="@style/Button_DW"
-                    android:layout_width="120dp"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/solidbtn_shape"
-                    android:backgroundTint="@color/textColor"
-                    android:drawableTint="#ffffff"
-                    android:text="Pay"
-                    android:textAllCaps="false"
-                    android:textColor="#ffffff" />
+            <ImageView
+                android:layout_width="30dip"
+                android:layout_height="30dip"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="right|center_vertical"
+                android:layout_margin="10dip"
+                android:src="@drawable/ic_right_arrow">
 
-            </LinearLayout>
+            </ImageView>
+
+        </FrameLayout>
+
         </LinearLayout>
 
 </LinearLayout>
