--- a/app/src/main/res/layout/wallet_payment_methods.xml
+++ b/app/src/main/res/layout/wallet_payment_methods.xml
@@ -2,12 +2,12 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:fitsSystemWindows="true"
     android:layout_gravity="center"
     android:background="#f0f1ed"
-    android:orientation="vertical"
-    android:layout_margin="10dp">
+    android:orientation="vertical">
 
 
 
@@ -64,7 +64,7 @@
                     android:padding="8dp"
                     android:layout_marginEnd="20dp"
                     android:layout_weight="0.3"
-                    android:background="@drawable/background_round_white"
+                    android:background="@color/white"
                     android:onClick="openAddMobileMoney"
                     android:orientation="vertical">
 
@@ -83,7 +83,7 @@
                     android:layout_height="90dp"
                     android:padding="8dp"
                     android:layout_weight=".3"
-                    android:background="@drawable/background_round_white"
+                    android:background="@color/white"
                     android:onClick="openAddMobileMoney"
                     android:orientation="vertical">
 
@@ -111,7 +111,7 @@
                     android:layout_height="90dp"
                     android:padding="8dp"
                     android:layout_weight="0.3"
-                    android:background="@drawable/background_round_white"
+                    android:background="@color/white"
                     android:onClick="openAddMoneyVisa"
                     android:orientation="vertical">
 
@@ -130,7 +130,7 @@
                     android:layout_marginStart="20dp"
                     android:padding="8dp"
                     android:layout_weight="0.3"
-                    android:background="@drawable/background_round_white"
+                    android:background="@color/white"
                     android:onClick="openAddMoneyVoucher"
                     android:orientation="vertical">
 
