--- a/app/src/main/res/layout/wallet_purchase_preview.xml
+++ b/app/src/main/res/layout/wallet_purchase_preview.xml
@@ -4,9 +4,11 @@
     android:layout_height="wrap_content"
     android:background="@drawable/solidwhite_shape"
     android:layout_margin="10dp"
-    android:orientation="vertical"
-  >
+    android:orientation="vertical">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -20,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginTop="15dp"
+                android:layout_margin="10dp"
                 android:background="@drawable/rectangular_green_frame" >
 
                 <TextView
@@ -46,7 +48,6 @@
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="Merchant ID"
-                        android:textAppearance="@style/textAppearance_general"
                         android:background="@drawable/rectangular_green_frame"/>
                     <TextView
                         android:id="@+id/text_view_purchase_preview_mechant_id"
@@ -57,7 +58,8 @@
                         android:layout_weight="1"
                         android:text="123456789025"
                         android:alpha="1.0"
-                        android:textAppearance="@style/textAppearance_general"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
                         android:background="@drawable/rectangular_green_frame"
                         />
                 </LinearLayout>
@@ -74,7 +76,6 @@
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="Paying "
-                        android:textAppearance="@style/textAppearance_general"
                         android:background="@drawable/rectangular_green_frame"/>
                     <TextView
                         android:id="@+id/text_view_purchase_preview_name"
@@ -85,7 +86,8 @@
                         android:layout_weight="1"
                         android:text="Kalin Farms"
                         android:alpha="1.0"
-                        android:textAppearance="@style/textAppearance_general"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
                         android:background="@drawable/rectangular_green_frame"
                         />
                 </LinearLayout>
@@ -101,7 +103,6 @@
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="Service"
-                        android:textAppearance="@style/textAppearance_general"
                         android:background="@drawable/rectangular_green_frame"/>
                     <TextView
                         android:id="@+id/text_view_purchase_service"
@@ -112,7 +113,8 @@
                         android:layout_weight="1"
                         android:text="Food Purchase"
                         android:alpha="1.0"
-                        android:textAppearance="@style/textAppearance_general"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
                         android:background="@drawable/rectangular_green_frame"
                         />
                 </LinearLayout>
@@ -128,7 +130,6 @@
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="Transaction Amount"
-                        android:textAppearance="@style/textAppearance_general"
                         android:background="@drawable/rectangular_green_frame"/>
                     <TextView
                         android:id="@+id/txt_view_crop_bill_preview_total"
@@ -139,7 +140,8 @@
                         android:layout_weight="1"
                         android:text="UGX 0"
                         android:alpha="1.0"
-                        android:textAppearance="@style/textAppearance_general"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
                         android:background="@drawable/rectangular_green_frame"
                         />
                 </LinearLayout>
@@ -155,7 +157,6 @@
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="Purchase Date"
-                        android:textAppearance="@style/textAppearance_general"
                         android:background="@drawable/rectangular_green_frame"/>
                     <TextView
                         android:id="@+id/text_view_purchase_date_time"
@@ -166,7 +167,8 @@
                         android:layout_weight="1"
                         android:text="2019/01/01  23:00pm"
                         android:alpha="1.0"
-                        android:textAppearance="@style/textAppearance_general"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
                         android:background="@drawable/rectangular_green_frame"
                         />
                 </LinearLayout>
@@ -183,7 +185,6 @@
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
                         android:text="Discount Amount"
-                        android:textAppearance="@style/textAppearance_general"
                         android:background="@drawable/rectangular_green_frame"/>
                     <TextView
                         android:id="@+id/txt_view_discount_preview_total"
@@ -194,7 +195,8 @@
                         android:layout_weight="1"
                         android:text="UGX 0"
                         android:alpha="1.0"
-                        android:textAppearance="@style/textAppearance_general"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
                         android:background="@drawable/rectangular_green_frame"
                         />
                 </LinearLayout>
@@ -220,31 +222,46 @@
                     />
 
             </LinearLayout>
-
-            <LinearLayout
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_marginTop="@dimen/dimen_20dp"
-                android:orientation="horizontal">
+                android:layout_marginLeft="@dimen/margin_10"
+                android:layout_marginTop="25dp"
+                android:layout_marginRight="@dimen/margin_10"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/rounded_corners_button"
+                android:gravity="right">
+
                 <Button
                     android:id="@+id/btn_purchase_preview_confirm"
                     style="@style/Button_DW"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_gravity="right"
-                    android:background="@drawable/solidbtn_shape"
-                    android:paddingStart="20dp"
-                    android:paddingEnd="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dip"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:background="@color/transparent"
+                    android:backgroundTint="@color/textColor"
                     android:text="@string/comfirm_purchase"
-                    android:textAllCaps="false"
-                    android:textColor="@color/white" />
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/button_text_size" />
 
+                <ImageView
+                    android:layout_width="30dip"
+                    android:layout_height="30dip"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="right|center_vertical"
+                    android:layout_margin="10dip"
+                    android:src="@drawable/ic_right_arrow">
 
-            </LinearLayout>
+                </ImageView>
+
+            </FrameLayout>
+
 
 
         </LinearLayout>
 
+    </ScrollView>
 </LinearLayout>
