--- a/app/src/main/res/layout/wallet_statement_card.xml
+++ b/app/src/main/res/layout/wallet_statement_card.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorAccentLight">
 
 
@@ -10,11 +10,12 @@
         android:id="@+id/layout_statement_card"
         android:clickable="true"
         android:layout_width="match_parent"
-        android:layout_height="140dip"
+        android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:paddingTop="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
+        android:paddingTop="14dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingBottom="12dp"
         android:background="@drawable/solidwhite_shape"
         android:orientation="vertical">
 
@@ -26,47 +27,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Nov 20, 2020"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold" />
-            <TextView
-                android:id="@+id/time"
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/img_transactions_card_more"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="00:36 AM"
-                android:layout_gravity="right"
-                android:gravity="right"
-                android:textSize="15sp"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold" />
+                android:layout_gravity="end"
+                app:srcCompat="@drawable/ic_baseline_more_vert" />
+
+
         </FrameLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dip"
-            android:layout_marginTop="5dip"
-            android:background="@color/gray"
-            >
 
-        </View>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dip"
-            android:orientation="horizontal">
-
-
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            >
+            android:layout_marginTop="10dp">
             <LinearLayout
                 android:id="@+id/layout_debit_activity"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginBottom="2dp">
 
                 <LinearLayout
 
@@ -79,10 +64,11 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="2dp"
                         android:layout_weight="4.5"
                         android:gravity="start"
                         android:text="Debit"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:fontFamily="@font/josefin_sans"
                         android:textColor="@color/device_problem" />
 
@@ -92,7 +78,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2.5"
                         android:text="- UGX 0"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:fontFamily="@font/josefin_sans"
                         android:textColor="@color/device_problem" />
 
@@ -112,7 +98,7 @@
                         android:layout_weight="4.5"
                         android:gravity="start"
                         android:text="Paid To"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:fontFamily="@font/josefin_sans"
                         android:textColor="@color/textColor"
                         />
@@ -123,7 +109,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2.5"
                         android:text="Someone"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:fontFamily="@font/josefin_sans"
                         android:textColor="@color/textColor"
                         />
@@ -135,14 +121,16 @@
                 android:id="@+id/layout_home_credit_activity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginBottom="5dp">
 
                 <LinearLayout
 
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:weightSum="7"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="2sp">
 
                     <TextView
                         android:layout_width="0dp"
@@ -150,7 +138,7 @@
                         android:layout_weight="4.5"
                         android:gravity="start"
                         android:text="Credit"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:fontFamily="@font/josefin_sans"
                         android:textColor="@color/colorPrimary" />
 
@@ -160,7 +148,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2.5"
                         android:text="+ UGX 0"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:fontFamily="@font/josefin_sans"
                         android:textColor="@color/colorPrimary" />
 
@@ -178,7 +166,7 @@
                         android:layout_weight="4.5"
                         android:gravity="start"
                         android:text="Received From"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:fontFamily="@font/josefin_sans"
                         android:textColor="@color/textColor"
 
@@ -189,7 +177,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="2.5"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:fontFamily="@font/josefin_sans"
                         android:text="Someone"
                         android:textColor="@color/textColor"
@@ -210,7 +198,7 @@
                     android:layout_weight="4.5"
                     android:gravity="start"
                     android:text="Reference Number"
-                    android:textSize="12sp"
+                    android:textSize="14sp"
                     android:fontFamily="@font/josefin_sans"
                     android:textColor="@color/textColor"/>
 
@@ -220,7 +208,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="2.5"
                     android:text="Someone"
-                    android:textSize="12sp"
+                    android:textSize="14sp"
                     android:fontFamily="@font/josefin_sans"
                     android:textColor="@color/textColor"
                     />
@@ -232,35 +220,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_30dp"
                 android:layout_marginTop="5dp"
-                android:weightSum="5"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/text_view_receipt"
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp"
+                    android:paddingTop="4dp"
                     android:paddingBottom="4dp"
-                    android:paddingTop="2dp"
                     android:text="Receipt"
                     android:textAllCaps="false"
-                    android:background="@drawable/rounded_corners_button4"
+                    android:background="@drawable/rectangular_green_solid"
                     android:textColor="@color/white"
                     android:fontFamily="@font/josefin_sans"
-                    android:textSize="12sp"
-
-                    />
+                    android:textSize="12sp" />
 
                 <TextView
-                    android:layout_weight="4"
                     android:id="@+id/text_view_time_transaction"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
                     android:text="13:00 AM"
-                    android:textSize="14sp"
-                    android:visibility="gone"
-                    android:gravity="right"
-                    />
+                    android:textSize="12sp"
+                    android:gravity="end" />
             </LinearLayout>
         </LinearLayout>
 
