--- a/app/src/main/res/layout/fragment_wallet_loan_details.xml
+++ b/app/src/main/res/layout/fragment_wallet_loan_details.xml
@@ -268,6 +268,7 @@
 
 
                         <EditText
+                            android:id="@+id/loanpayments_edtxt"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="0.5"
@@ -276,7 +277,7 @@
                             android:inputType="numberDecimal" />
 
                         <TextView
-
+                            android:id="@+id/loanpaymentfrequency"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:background="@drawable/edittext_right_corners_green"
@@ -326,7 +327,8 @@
                             android:gravity="center"
                             android:layout_weight="0.3" />
 
-                        <EditText
+                        <TextView
+                            android:id="@+id/amount_due_txtview"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="0.6"
@@ -357,15 +359,38 @@
                     android:text="Loan Duration"
                     android:textColor="@color/textColor"
                     android:textSize="14sp" />
-                <EditText
-                    android:id="@+id/txt_loan_application_duration"
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:background="@drawable/edittext_corner"
-                    android:inputType="numberDecimal"
-                    android:paddingLeft="@dimen/dimen_15sp"
-                    android:textColor="@color/black"
-                    android:textSize="16sp" />
+                    android:orientation="horizontal">
+
+
+                    <TextView
+                        android:id="@+id/txt_loan_application_duration"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.5"
+                        android:paddingLeft="@dimen/dimen_15sp"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:background="@android:color/transparent"
+                        android:inputType="numberDecimal" />
+
+                    <TextView
+                        android:id="@+id/loanpayment_duration_units"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/edittext_right_corners_green"
+                        android:textColor="@color/white"
+                        android:text="months"
+                        android:textSize="14sp"
+                        android:gravity="center"
+                        android:layout_weight="0.4" />
+
+                </LinearLayout>
             </LinearLayout>
             </LinearLayout>
 
